// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should add the noRefinement CSS class with a single page 1`] = `
<div>
  <div
    class="root noRefinementRoot"
  >
    <ul
      class="list"
    >
      <li
        class="item pageItem selectedItem"
      >
        <a
          aria-label="1"
          class="link"
          href="0"
        >
          1
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="2"
          class="link"
          href="1"
        >
          2
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="3"
          class="link"
          href="2"
        >
          3
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="4"
          class="link"
          href="3"
        >
          4
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="5"
          class="link"
          href="4"
        >
          5
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="6"
          class="link"
          href="5"
        >
          6
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="7"
          class="link"
          href="6"
        >
          7
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination should disable last page if already on it 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item firstPageItem"
      >
        <a
          aria-label="First"
          class="link"
          href="0"
        />
      </li>
      <li
        class="item previousPageItem"
      >
        <a
          aria-label="Previous"
          class="link"
          href="18"
        />
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="14"
          class="link"
          href="13"
        >
          14
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="15"
          class="link"
          href="14"
        >
          15
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="16"
          class="link"
          href="15"
        >
          16
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="17"
          class="link"
          href="16"
        >
          17
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="18"
          class="link"
          href="17"
        >
          18
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="19"
          class="link"
          href="18"
        >
          19
        </a>
      </li>
      <li
        class="item pageItem selectedItem"
      >
        <a
          aria-label="20"
          class="link"
          href="19"
        >
          20
        </a>
      </li>
      <li
        class="item nextPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
      <li
        class="item lastPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination should display the first/last link 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item firstPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
      <li
        class="item pageItem selectedItem"
      >
        <a
          aria-label="1"
          class="link"
          href="0"
        >
          1
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="2"
          class="link"
          href="1"
        >
          2
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="3"
          class="link"
          href="2"
        >
          3
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="4"
          class="link"
          href="3"
        >
          4
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="5"
          class="link"
          href="4"
        >
          5
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="6"
          class="link"
          href="5"
        >
          6
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="7"
          class="link"
          href="6"
        >
          7
        </a>
      </li>
      <li
        class="item lastPageItem"
      >
        <a
          aria-label="Last"
          class="link"
          href="19"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination should have all buttons disabled if there are no results 1`] = `
<div>
  <div
    class="root noRefinementRoot"
  >
    <ul
      class="list"
    >
      <li
        class="item firstPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
      <li
        class="item previousPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
      <li
        class="item pageItem selectedItem"
      >
        <a
          aria-label="1"
          class="link"
          href="0"
        >
          1
        </a>
      </li>
      <li
        class="item nextPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
      <li
        class="item lastPageItem disabledItem"
      >
        <span
          class="link"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination should render five elements 1`] = `
<div>
  <div
    class="root"
  >
    <ul
      class="list"
    >
      <li
        class="item pageItem selectedItem"
      >
        <a
          aria-label="1"
          class="link"
          href="0"
        >
          1
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="2"
          class="link"
          href="1"
        >
          2
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="3"
          class="link"
          href="2"
        >
          3
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="4"
          class="link"
          href="3"
        >
          4
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="5"
          class="link"
          href="4"
        >
          5
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="6"
          class="link"
          href="5"
        >
          6
        </a>
      </li>
      <li
        class="item pageItem"
      >
        <a
          aria-label="7"
          class="link"
          href="6"
        >
          7
        </a>
      </li>
    </ul>
  </div>
</div>
`;
